k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pt-deployment
  namespace: pt-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pt
  template:
    metadata:
      labels:
        app: pt
    spec:
      containers:
        - name: pt-container
          image: <DOCKER_USERNAME>/pt-devops-app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
