k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pt-ingress
  namespace: pt-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pt.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pt-service
                port:
                  number: 80
